# aware-api

./: .gitignore  makefile  pyproject.toml
aware_api/: constants.py  db.py
aware_api/api/: errors.py  main.py
