[tool.poetry]
name = "aware-api"
version = "0.1.0"
description = ""
authors = ["suddenly_inui <inuiyuki0904@gmail.com>"]
readme = "README.md"
packages = [{include = "aware_api"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
