[tool.poetry]
name = "aware-api"
version = "0.1.0"
description = ""
authors = ["suddenly_inui <inuiyuki0904@gmail.com>"]
readme = "README.md"
packages = [{include = "aware_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pandas = "^2.0.3"
sqlalchemy = "^2.0.20"
pymysql = "^1.1.0"
pydantic = "^2.3.0"


[tool.poetry.scripts]
start = "aware_api.api.main:app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
